# SecurityCameraApp_MJ

./: .gitignore  CMakeLists.txt  MILESTONES.md  README.md
backend/: CMakeLists.txt  Doxyfile  backend_runner.cc  backend_runner.cpp  doc.md
backend/backend_lib/: AccidentDetection.cpp  AccidentDetection.h  BackendProcessor.cpp  BackendProcessor.h  CMakeLists.txt  Detection.cpp  Detection.h  JQueue.h  Main.cpp  VideoServer.cpp  semaphore.h
backend/backend_lib/Database/: CMakelists.txt  DatabaseManager.cpp  DatabaseManager.h
backend/backend_lib/Logger/: Logger.cpp  Logger.h
backend/protos/: video_service.proto
backend/sqlite/: CMakeLists.txt
backend/tests/: CMakeLists.txt  main_test.cpp  test_Queue.cpp  test_backend_processor.cpp  test_database_manager.cpp
camera/: CMakeLists.txt  Dockerfile  camera_runner.cc  camera_runner.cpp
camera/camera_lib/: CMakeLists.txt  CameraProcessor.cpp  CameraProcessor.h  JQueue.cpp  VideoClient.cpp  VideoClient.h
external_libs/: CMakeLists.txt
external_libs/googletest-release-1.11.0/: CMakeLists.txt
external_libs/image_grpc/: CMakeLists.txt  OpencvImage.grpc.pb.cc  OpencvImage.grpc.pb.h  OpencvImage.pb.cc  OpencvImage.pb.h  OpencvImage.proto  common.cmake  video_service.grpc.pb.cc  video_service.grpc.pb.h  video_service.pb.cc  video_service.pb.h
